--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=lesson7
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/lesson7?serverTimeZone=UTC
+spring.datasource.username=user
+spring.datasource.password=1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.jdbc.dialect=mysql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.liquibase.enabled=true
+spring.liquibase.change-log=/db/changelog/db.changelog-master.yaml
