--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 url=jdbc:mysql://localhost:3306/lesson7?serverTimeZone=UTC
-username=user
+username=root
 password=1
 driver=com.mysql.cj.jdbc.Driver
-changeLogFile=src/main/resources/db.changelog/db.changelog-master.yaml
+changeLogFile=src/main/resources/db/changelog/db.changelog-master.yaml
